k8s/apps/atuin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: atuin
  labels:
    app: atuin
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: atuin
  template:
    metadata:
      labels:
        app: atuin
    spec:
      containers:
        - name: atuin
          image: ghcr.io/atuinsh/atuin:18.23.0@sha256:f232feeead54a0a13132b9cd477e312c3380e9dc90f1db24c4f79ce6c8e034ea
          args: ["start"]
          ports:
            - containerPort: 8888
          resources:
            requests:
              memory: 32Mi
            limits:
              memory: 64Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          volumeMounts:
            - name: config
              mountPath: /config
      volumes:
        - name: config
          emptyDir: {}
