k8s/apps/atuin/atuin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: atuin
spec:
  selector:
    app: atuin
  ports:
    - port: 8888
      targetPort: 8888
